# Silver-Cplusplus

./: .gitignore  CMakeLists.txt  README.md  game.cpp  game.hpp  main  main.cpp  structure.md  terms.md
Classes/: SceneManagement.md
Documents/: README.md  structure.md  terms.md
Documents/Functions/: Drawing Functions.md  Liquify.md  MeshAt.md  all.md  calculateDistance.md  createEmptyPrefab.md  createPrefab.md  destroy.md  findObjects.md  getKey  getKey.md  getLocation.md  getMesh.md  getMeshValuesAt.md  getObjectsAt.md  getRandom.md  gotoxy.md  isKey.md  kill.md  loadScene.md  meshAt.md  placeObject.md  resetScene.md  revive.md  saveCurrentWorld  saveCurrentWorld.md  saveWorldAs.md  setConsoleTitle.md  setWorldBounds.md  startVMouse.md  stopVMouse.md  wasMouseClicked.md
Documents/Modder's Guide/: before_modding.txt
Functions/: PlaceMesh.md  all.md  createObject.md  createPrefab.md  destroy.md  findObjects.md  getMesh_.md  meshAt.md  placeObject.md  saveWorldAs.md  setConsoleTitle.md  setWorldBounds.md
Modder's Guide/: before_modding.txt
Useful/: Json.txt
include/: Silver.hpp  game.hpp  silver.Camera.hpp  silver.Keyboard.hpp  silver.Music.hpp  silver.Threading.hpp  silver.Timer.hpp  silver.VMouse.hpp  silver.hpp  silver.pch.hpp  smath.hpp
src/: Silver.cpp  SilverCamera.cpp  SilverKeyboard.cpp  SilverSpriteRendering.cpp  game.cpp  main.cpp  silver.Animation.cpp  silver.Camera.cpp  silver.Fluid.cpp  silver.Keyboard.cpp  silver.Music.cpp  silver.SpriteRendering.cpp  silver.Threading.cpp  silver.Timer.cpp  silver.VMouse.cpp  silver.cpp
(+8 files in other folders)
